# halo2-snark-aggregator

./: Cargo.toml
halo2-ecc-circuit-lib/: Cargo.toml
halo2-ecc-circuit-lib/src/five/: integer_chip.rs
halo2-snark-aggregator/: Cargo.toml
halo2-snark-aggregator-api/: Cargo.toml
halo2-snark-aggregator-api/src/hash/: poseidon.rs
halo2-snark-aggregator-api/src/systems/halo2/: verify.rs
halo2-snark-aggregator-circuit/: Cargo.toml
halo2-snark-aggregator-circuit/examples/: benchmark-aggregator.rs  benchmark-chip.rs
halo2-snark-aggregator-circuit/src/: aggregator.rs  lib.rs  verify_circuit.rs
halo2-snark-aggregator-solidity/: Cargo.toml
halo2-snark-aggregator-solidity/src/: lib.rs
