[package]
name = "halo2-ecc-circuit-lib"
version = "0.1.0"
edition = "2021"
authors = ["zhangjunyu <junyu92@gmail.com>"]

[dependencies]
group = "0.11"
halo2_proofs = { git = "https://github.com/junyu0312/halo2", rev = "7cfeca346dac2d96932f7039571b41f4eb780c47", default-features = true }
num-integer = "0.1"
num-bigint = { version = "0.4", features = ["rand"] }
pairing_bn256 = { git = "https://github.com/appliedzkp/pairing" }

[dev-dependencies]
chrono = "0.4.19"
rand = "0.8"
rand_xorshift = "0.3"