[package]
name = "halo2-snark-aggregator-solidity"
version = "0.1.0"
edition = "2021"
authors = ["zhangjunyu <junyu92@gmail.com>"]

[dependencies]
halo2_proofs = { git = "https://github.com/junyu0312/halo2", rev = "7cfeca346dac2d96932f7039571b41f4eb780c47", default-features = true }
halo2-ecc-circuit-lib = { path = "../halo2-ecc-circuit-lib" }
halo2-snark-aggregator-api = { path = "../halo2-snark-aggregator-api" }
halo2-snark-aggregator-circuit = { path = "../halo2-snark-aggregator-circuit" }
num-bigint = { version = "0.4", features = ["rand"] }
pairing_bn256 = { git = "https://github.com/appliedzkp/pairing" }
tera = "1.15.0"
